Refactored code to run with jdk 11