@@ -6,9 +6,9 @@ public class NeedForSynchronizationThreadInterference {
 
     public static void incrementCounter() {
         int current = counter;
-        System.out.printf("Before incrementing: %s Thread: %s%n", counter, Thread.currentThread().threadId());
+        System.out.printf("Before incrementing: %s Thread: %s%n", counter, Thread.currentThread().getId());
         counter = current + 1;
-        System.out.printf("After incrementing: %s Thread: %s%n", counter, Thread.currentThread().threadId());
+        System.out.printf("After incrementing: %s Thread: %s%n", counter, Thread.currentThread().getId());
     }
 
     public static void main(String[] args) {
